tests/miz/fail/parser/fail_parser_set_comprehension_missing_condition_001.miz
theorem MissingCondition: { x where x is set : } = y;
